UN-some small changes
footer change and mail functionality

--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -481,7 +481,7 @@
                                        <p>All-in-one, no-code, AI powered platform that automates infrastructure, deployments, and operations — delivering faster releases, fewer incidents, and lower costs.</p>
                                     </div>
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--purple " href="schedule-a-demo/index.html" target="">Get Started for free</a>						<a class="ns-btn ns-btn--default " href="schedule-a-demo/index.html" target="">Schedule a demo</a>			
+                                       <a class="ns-btn ns-btn--purple " href="https://uniphyops.com/" target="_blank">Get Started for free</a>						<a class="ns-btn ns-btn--default " href="schedule-a-demo/index.html" target="">Schedule a demo</a>			
                                     </div>
                                  </div>
                                  <div class="content-image__image  content-image__image--align-default">
@@ -696,8 +696,8 @@
                                  </div>
                                  <div class="cta__buttons">
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--white " href="schedule-a-demo/index.html" target="">Get Started For Free</a>
-                                       <a class="ns-btn ns-btn--white-border " href="schedule-a-demo/index.html" target="">Watch Demo</a>
+                                       <a class="ns-btn ns-btn--white " href="https://uniphyops.com/" target="_blank">Get Started For Free</a>
+                                       <a class="ns-btn ns-btn--white-border " href="schedule-a-demo/index.html" target="">Schedule A Demo</a>
                                     </div>
                                  </div>
                               </div>
@@ -733,19 +733,6 @@
                            </ul>
                         </div>
                      </section>
-                     <!-- <section id="text-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
-                        <h4 class="footer-widget__title">Social Media</h4>
-                        <div class="menu-resource-container">
-                           <ul id="menu-resource" class="menu" style="margin-top: 0;">
-                              <li id="menu-item-1843" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;">
-                                 <a target="_blank" rel="noopener">
-                                    <span style="font-size: medium; padding-left: 10px;">LinkedIn</span>
-                                 </a>
-                              </li>
-                              <li id="menu-item-3823" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-post_type menu-item-object-page menu-item-3823" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">Twitter</span></a></li>
-                           </ul>
-                        </div>
-                     </section> -->
                      <section id="nav_menu-1" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
                            <h4 class="footer-widget__title">Platform</h4>
                            <div class="menu-platform-container">
@@ -781,8 +768,8 @@
                   </div>
                   <div class="main-footer__copy__menu">
                      <ul id="footer-menu" class="menu">
-                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a href=""></a></li>
-                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a href=""></a></li>
+                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a></a></li>
+                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a></a></li>
                      </ul>
                      </div>
                   <div class="clearfix"></div>
