--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -746,7 +746,7 @@
                                     <div class="section-block__content text-center ">
                                     </div>
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--purple " href="../schedule-a-demo/index.html" target="">Sign up for free</a>						
+                                       <a class="ns-btn ns-btn--purple " href="https://uniphyops.com/" target="_blank">Sign up for free</a>						
 									            <a class="ns-btn ns-btn--white " href="../schedule-a-demo/index.html" target="">See a live demo</a>			
                                     </div>
                                  </div>
@@ -1013,8 +1013,8 @@
                                  </div>
                                  <div class="cta__buttons">
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--white " href="../schedule-a-demo/index.html" target="">Get Started For Free</a>
-									            <a class="ns-btn ns-btn--white-border " href="../schedule-a-demo/index.html" target="">Watch Demo</a>
+                                       <a class="ns-btn ns-btn--white " href="https://uniphyops.com/" target="_blank">Get Started For Free</a>
+									            <a class="ns-btn ns-btn--white-border " href="../schedule-a-demo/index.html" target="">Schedule A Demo</a>
                                     </div>
                                  </div>
                               </div>
@@ -1041,22 +1041,13 @@
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu" style="margin-top: 0;">
                               <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="align-content: center; margin-bottom: 10px; height: 45px !important;">
-                                 <a href="index.html">
+                                 <a href="../index.html">
                                     <img src="../assets/images/uniphy.svg" class="image wp-image-5578  attachment-medium size-medium" alt="Uniphy logo" loading="lazy" style="max-width: 100%; height: auto;" height="44.21"/>
                                  </a>
                               </li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--location menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: max-content !important; margin: 0 !important;"><a style="display: flex;"><p style="font-size: medium; padding-left: 10px;">5805 Callaghan Road, Suite #115, San Antonio, TX 78228, USA</p></a></li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">support@uniphy.com</span></a></li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">+1 (210) 858-5280</span></a></li>
-                           </ul>
-                        </div>
-                     </section>
-                     <section id="text-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
-                        <h4 class="footer-widget__title">Social Media</h4>
-                        <div class="menu-resource-container">
-                           <ul id="menu-resource" class="menu" style="margin-top: 0;">
-                              <li id="menu-item-1843" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">LinkedIn</span></a></li>
-                              <li id="menu-item-3823" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-post_type menu-item-object-page menu-item-3823" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">Twitter</span></a></li>
                            </ul>
                         </div>
                      </section>
@@ -1093,13 +1084,12 @@
                   <div class="main-footer__copy__text">
                      &copy; <span id="year"></span> Uniphy Inc. All Rights Reserved.
                   </div>
-                  <!-- <div class="main-footer__copy__menu">
+                  <div class="main-footer__copy__menu">
                      <ul id="footer-menu" class="menu">
-                        <li id="menu-item-5779" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5779"><a href="https://www.paloaltonetworks.com/legal-notices/privacy">Privacy Statement</a></li>
-                        <li id="menu-item-5780" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5780"><a href="https://www.paloaltonetworks.com/legal-notices/terms-of-use">Terms of Use</a></li>
-                        <li id="menu-item-5577" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5577"><a target="_blank" rel="noopener" href="https://www.paloaltonetworks.com/content/dam/pan/en_US/assets/pdf/legal/palo-alto-networks-end-user-license-agreement-eula.pdf">End User License Agreement</a></li>
+                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a></a></li>
+                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a></a></li>
                      </ul>
-                     </div> -->
+                     </div>
                   <div class="clearfix"></div>
                </div>
             </div>
