UN-new about page
key highlight resolution fix and minor fixes

--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -481,7 +481,7 @@
                                        <p>All-in-one, no-code, AI powered platform that automates infrastructure, deployments, and operations — delivering faster releases, fewer incidents, and lower costs.</p>
                                     </div>
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--purple " href="https://uniphyops.com/" target="_blank">Get Started for free</a>						<a class="ns-btn ns-btn--default " href="schedule-a-demo/index.html" target="">Schedule a demo</a>			
+                                       <a class="ns-btn ns-btn--purple " href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Get Started for free</a>						<a class="ns-btn ns-btn--default " href="schedule-a-demo/index.html" target="">Schedule a demo</a>			
                                     </div>
                                  </div>
                                  <div class="content-image__image  content-image__image--align-default">
@@ -696,7 +696,7 @@
                                  </div>
                                  <div class="cta__buttons">
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--white " href="https://uniphyops.com/" target="_blank">Get Started For Free</a>
+                                       <a class="ns-btn ns-btn--white " href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Get Started For Free</a>
                                        <a class="ns-btn ns-btn--white-border " href="schedule-a-demo/index.html" target="">Schedule A Demo</a>
                                     </div>
                                  </div>
@@ -728,8 +728,8 @@
                                  </a>
                               </li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--location menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: max-content !important; margin: 0 !important;"><a style="display: flex;"><p style="font-size: medium; padding-left: 10px;">5805 Callaghan Road, Suite #115, San Antonio, TX 78228, USA</p></a></li>
-                              <li id="menu-item-1843" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">support@uniphy.com</span></a></li>
-                              <li id="menu-item-1843" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">+1 (210) 858-5280</span></a></li>
+                              <li id="menu-item-1843" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a href="mailto:support@uniphy.com"><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">support@uniphy.com</span></a></li>
+                              <li id="menu-item-1843" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a href="tel:+1 (210) 858-5280"><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">+1 (210) 858-5280</span></a></li>
                            </ul>
                         </div>
                      </section>
@@ -754,7 +754,7 @@
                         <h4 class="footer-widget__title">Contact Us</h4>
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu">
-                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a>About Us</a></li>
+                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="about/index.html">About Us</a></li>
                               <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="schedule-a-demo/index.html">Schedule a demo</a></li>
                            </ul>
                         </div>
@@ -768,8 +768,8 @@
                   </div>
                   <div class="main-footer__copy__menu">
                      <ul id="footer-menu" class="menu">
-                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a></a></li>
-                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a></a></li>
+                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a href="https://www.linkedin.com/company/digital-software-inc/" target="_blank" rel="noopener noreferrer"></a></li>
+                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a href="https://twitter.com/Digitalsoftwar6" target="_blank" rel="noopener noreferrer"></a></li>
                      </ul>
                      </div>
                   <div class="clearfix"></div>
