--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -426,6 +426,39 @@
             width: 160px
          }
       }
+
+      @media (min-width: 1024px) and (max-width: 1100px){
+         .key__highlight ul li {
+            width: 128px
+         }
+         .key__highlight ul li .title {
+            font-size: 1rem;
+         }
+         .key__highlight ul {
+            --col-gap: 25px;
+         }
+      }
+      @media (min-width: 1101px) and (max-width: 1200px){
+         .key__highlight ul li {
+            width: 140px
+         }
+         .key__highlight ul {
+            --col-gap: 25px;
+         }
+         .key__highlight ul li .title {
+            font-size: 1rem;
+         }
+      }
+      @media (min-width: 1201px) and (max-width: 1330px){
+         .key__highlight ul {
+            --col-gap: 20px;
+         }
+      }
+      @media (min-width: 1331px) and (max-width: 1440px){
+         .key__highlight ul {
+            --col-gap: 38px;
+         }
+      }
       </style>
       <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
       <!-- This site is optimized with the Yoast SEO plugin v17.2 - https://yoast.com/wordpress/plugins/seo/ -->
@@ -746,7 +779,7 @@
                                     <div class="section-block__content text-center ">
                                     </div>
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--purple " href="https://uniphyops.com/" target="_blank">Sign up for free</a>						
+                                       <a class="ns-btn ns-btn--purple " href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Sign up for free</a>						
 									            <a class="ns-btn ns-btn--white " href="../schedule-a-demo/index.html" target="">See a live demo</a>			
                                     </div>
                                  </div>
@@ -1013,7 +1046,7 @@
                                  </div>
                                  <div class="cta__buttons">
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--white " href="https://uniphyops.com/" target="_blank">Get Started For Free</a>
+                                       <a class="ns-btn ns-btn--white " href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Get Started For Free</a>
 									            <a class="ns-btn ns-btn--white-border " href="../schedule-a-demo/index.html" target="">Schedule A Demo</a>
                                     </div>
                                  </div>
@@ -1046,8 +1079,8 @@
                                  </a>
                               </li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--location menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: max-content !important; margin: 0 !important;"><a style="display: flex;"><p style="font-size: medium; padding-left: 10px;">5805 Callaghan Road, Suite #115, San Antonio, TX 78228, USA</p></a></li>
-                              <li id="menu-item-1843" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">support@uniphy.com</span></a></li>
-                              <li id="menu-item-1843" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">+1 (210) 858-5280</span></a></li>
+                              <li id="menu-item-1843" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a href="mailto:support@uniphy.com"><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">support@uniphy.com</span></a></li>
+                              <li id="menu-item-1843" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a href="tel:+1 (210) 858-5280"><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">+1 (210) 858-5280</span></a></li>
                            </ul>
                         </div>
                      </section>
@@ -1072,7 +1105,7 @@
                         <h4 class="footer-widget__title">Contact Us</h4>
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu">
-                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a>About Us</a></li>
+                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="../about/index.html">About Us</a></li>
                               <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="../schedule-a-demo/index.html">Schedule a demo</a></li>
                            </ul>
                         </div>
@@ -1086,8 +1119,8 @@
                   </div>
                   <div class="main-footer__copy__menu">
                      <ul id="footer-menu" class="menu">
-                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a></a></li>
-                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a></a></li>
+                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a href="https://www.linkedin.com/company/digital-software-inc/" target="_blank" rel="noopener noreferrer"></a></li>
+                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a href="https://twitter.com/Digitalsoftwar6" target="_blank" rel="noopener noreferrer"></a></li>
                      </ul>
                      </div>
                   <div class="clearfix"></div>
