--- a/uniphynew/schedule-a-demo/index.html
+++ b/uniphynew/schedule-a-demo/index.html
@@ -510,8 +510,8 @@
                                  </a>
                               </li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--location menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: max-content !important; margin: 0 !important;"><a style="display: flex;"><p style="font-size: medium; padding-left: 10px;">5805 Callaghan Road, Suite #115, San Antonio, TX 78228, USA</p></a></li>
-                              <li id="menu-item-1843" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">support@uniphy.com</span></a></li>
-                              <li id="menu-item-1843" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">+1 (210) 858-5280</span></a></li>
+                              <li id="menu-item-1843" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a href="mailto:support@uniphy.com"><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">support@uniphy.com</span></a></li>
+                              <li id="menu-item-1843" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important; margin: 0 !important;"><a href="tel:+1 (210) 858-5280"><span style="font-size: medium; padding-left: 10px; margin: 0 !important;">+1 (210) 858-5280</span></a></li>
                            </ul>
                         </div>
                      </section>
@@ -536,7 +536,7 @@
                         <h4 class="footer-widget__title">Contact Us</h4>
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu">
-                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a>About Us</a></li>
+                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="../about/index.html">About Us</a></li>
                               <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="../schedule-a-demo/index.html">Schedule a demo</a></li>
                            </ul>
                         </div>
@@ -550,8 +550,8 @@
                   </div>
                   <div class="main-footer__copy__menu">
                      <ul id="footer-menu" class="menu">
-                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a></a></li>
-                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a></a></li>
+                        <li id="menu-item-5779" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-custom menu-item-object-custom menu-item-5779" style="margin: 0;"><a href="https://www.linkedin.com/company/digital-software-inc/" target="_blank" rel="noopener noreferrer"></a></li>
+                        <li id="menu-item-5780" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-5780" style="margin: 0;"><a href="https://twitter.com/Digitalsoftwar6" target="_blank" rel="noopener noreferrer"></a></li>
                      </ul>
                      </div>
                   <div class="clearfix"></div>
@@ -564,9 +564,8 @@
       <div id="ns-mobile-menu" class="ns-mobile-menu">
          <a id="mmenu-close-btn"></a>
          <ul id="menu-main-menu" class="">
-            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5281"><a href="../platform/index.html">Platform</a></li>
+            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5281"><a href="../platform/index.html">Features</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="../pricing/index.html">Pricing</a></li>
-            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1832"><a href="../customers/index.html">Customers</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
                <a href="">Resources</a>
             </li>
