UN-some animations and UI adjustments

--- a/uniphynew/about/index.html
+++ b/uniphynew/about/index.html
@@ -410,9 +410,9 @@
                         <div class="container ">
                            <div class="section-block__header text-left boxes--columns-two">
                               <h1 class="section-block__title boxes__title">Vision</h1>
-                              <p>Pioneering the next generation of software solutions by harnessing the power of innovation, agility, and customer-centricity. We are committed to reshaping the industry through cutting-edge technologies, adherence to best practices, and a relentless focus on delivering exceptional value.</p>
+                              <p>To pioneer software solutions that empower businesses through innovation and agility, helping them overcome today’s challenges and unlock future opportunities for growth and excellence.</p>
                               <h1 class="section-block__title boxes__title">Mission</h1>
-                              <p style="margin: 0;">To empower businesses to thrive in the digital age by providing transformative software solutions that are tailored to their unique needs. We strive to exceed customer expectations through our commitment to innovation, agility, and a customer-first approach. By leveraging the latest technologies and industry best practices, we aim to drive digital transformation and create sustainable value for our clients.</p>
+                              <p style="margin: 0;">To help businesses thrive in the digital era by offering bespoke solutions. We leverage cuttiing-edge technologies and follow industry best practices to drive digital transformation, delivering sustainable value for our clients.</p>
                            </div>
                         </div>
                         <!-- .container -->
