--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -189,6 +189,10 @@
          	font-weight: 500 !important;
          }
 
+         .uniphy-ad-banner .cta__inner--default h3 {
+            font-size: 1.30em !important;
+         }
+
          footer .footer-main-div {
          	display: flex;
          	justify-content: space-between;
@@ -575,13 +579,13 @@
                               <div class="content-image__inner content-image__inner--image-right content-image__inner--">
                                  <div class="content-image__content   content-image__content--more-area  ">
                                     <div class="section-block__header text-left ">
-                                       <h1 class="section-block__title content-image__title">Unified Operations and Application Lifecycle Management</h1>
+                                       <h1 class="section-block__title content-image__title animate__animated animate__fadeInUp">Unified Operations and Application Lifecycle Management</h1>
                                     </div>
-                                    <div class="section-block__content text-left ">
+                                    <div class="section-block__content text-left animate__animated animate__fadeInUp">
                                        <p>All-in-one, no-code, AI powered platform that automates infrastructure, deployments, and operations — delivering faster releases, fewer incidents, and lower costs.</p>
                                     </div>
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--purple " href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Get Started for free</a>						<a class="ns-btn ns-btn--default " href="schedule-a-demo/index.html" target="">Schedule a demo</a>			
+                                       <a class="ns-btn ns-btn--purple animate__animated animate__fadeInUp" href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Get Started for free</a>						<a class="ns-btn ns-btn--default animate__animated animate__fadeInUp" href="schedule-a-demo/index.html" target="">Schedule a demo</a>			
                                     </div>
                                  </div>
                                  <div class="content-image__image  content-image__image--align-default">
