--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -499,6 +499,10 @@
          .uniphy-ad-banner .cta__inner--default h2 {
          	font-weight: 500 !important;
          }
+         
+         .uniphy-ad-banner .cta__inner--default h3 {
+            font-size: 1.30em !important;
+         }
 
          footer .footer-main-div {
          	display: flex;
